@@ -1,3 +1,4 @@
 EulerD3dt3Scheme/EulerD3dt3Scheme.C
+JacobianMatrix/JacobianMatrix.C
 
 LIB = $(FOAM_USER_LIBBIN)/libPMFnumericalMethods
